# containers

./: .containerignore  .gitignore  .gitmodules  README.md  pyproject.toml
.github/: renovate.json
.github/actions/build-arch-image/: action.yml
.github/actions/publish-image/: action.yml
.github/actions/setup-syft/: action.yml
.github/actions/setup-uv/: action.yml
.github/workflow-templates/: publish-images.yml.j2
.github/workflows/: publish-images.yml  release-image.yml
docs/: container-monorepo-concept.md
images/_example/example-servicename/: Containerfile  container.yaml
images/nextcloud/nextcloud-notifypush/: Containerfile  README.md  container.yaml
images/nextcloud/nextcloud-phpfpm/: Containerfile  README.md  container.yaml
images/typo3/typo3-phpfpm/: Containerfile  README.md  container.yaml
scripts/: __init__.py  container_engine.py
shared/: oci-labels.env
